actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebusd-service    # < name of the service
  namespace: ebusd # < namespace where place the deployment and pods
spec:
  selector:
    app: actual # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 5006
